fixed overflow in stream lists

--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -84,7 +84,7 @@ header {
 
     #streams-all {
       max-height: 300px;
-      overflow: scroll;
+      overflow-y: scroll;
     }
   }
 }
